--- a/login.html
+++ b/login.html
@@ -4,16 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/index_style.css">
+    <link rel="icon" type="image/png" href="images/pizza_icon.png">
     <title>LOGIN | PIZZA EXPRESS</title>
 </head>
 <body>
-    <form action="index.html" method="POST">
-        <label for="user">User</label>
-        <input type="text" id="user" name="user_id" placeholder="@cosmefulanito"><br>
-        <label for="pass">Password</label>
+    <header>
+        <nav>
+            <div class="nav">
+                <a href="index.html">HOME</a>
+                <img src="images/pizza_icon_2.png">
+                <div class="option_bar">    
+                    <a href="login.html">LOGIN</a>
+                    <a href="register.html">REGISTER</a>
+                    <form class="nav_form">
+                        <input type="search" name="search">
+                        <button type="submit">SEARCH</button>
+                    </form> 
+                </div>   
+            </div>
+        </nav>
+    </header>
+    <main class="flex">
+        <div class="title">
+            <h1>PIZZA EXPRESS</h1>
+            <h5>Order your pizza online now. In short it will be in front of your door!</h5>
+        </div>    
+    </main>
+    <form class="form" action="index.html" method="POST">
+        <label for="user">USER</label>
+        <input type="text" id="user" name="user_id" placeholder="@username"><br>
+        <label for="pass">PASSWORD</label>
         <input type="password" id="pass" name="password" placeholder="********"><br>
 
-        <button>Login</button> 
+        <button>LOGIN</button> 
     </form>
 </body>
 </html>
