--- a/register.html
+++ b/register.html
@@ -4,9 +4,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/index_style.css">
+    <link rel="icon" type="image/png" href="images/pizza_icon.png">
     <title>REGISTER | PIZZA EXPRESS</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div class="nav">
+                <a href="index.html">HOME</a>
+                <img src="images/pizza_icon_2.png">
+                <div class="option_bar">    
+                    <a href="login.html">LOGIN</a>
+                    <a href="register.html">REGISTER</a>
+                    <form class="nav_form">
+                        <input type="search" name="search">
+                        <button type="submit">SEARCH</button>
+                    </form> 
+                </div>   
+            </div>
+        </nav>
+    </header>
+    <main class="flex">
+        <div class="title">
+            <h1>PIZZA EXPRESS</h1>
+            <h5>Order your pizza online now. In short it will be in front of your door!</h5>
+        </div> 
+        <form class="reg_form" action="success.html" method="POST">
+            <label for="name">NAME</label>
+            <input type="text" id="name" name="name_id" placeholder="Carl_Carlson"><br>
+            <label for="user">USER</label>
+            <input type="text" id="user" name="user_id" placeholder="@username"><br>
+            <label for="email">E-MAIL</label>
+            <input type="email" id="email" name="email_id" placeholder="example@gmail.com"><br>
+            <label for="password">PASSWORD</label>
+            <input type="password" id="password" name="password_id" placeholder="*********"><br>
+            <label for="password">PASSWORD</label>
+            <input type="password" id="password" name="password_id" placeholder="*********"><br>
+            <button>REGISTER</button>      
+        </form>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
