--- a/success.html
+++ b/success.html
@@ -7,13 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/index_style.css">
     <link rel="icon" type="image/png" href="images/pizza_icon.png">
-    <title>HOME | PIZZA EXPRESS</title>
+    <title>SUCCESS | PIZZA EXPRESS</title>
 </head>
 <body>
     <header>
         <nav>
             <div class="nav">
-                <p></p>
+                <a href="index.html">HOME</a>
                 <img src="images/pizza_icon_2.png">
                 <div class="option_bar">    
                     <a href="login.html">LOGIN</a>
@@ -31,7 +31,10 @@
             <h1>PIZZA EXPRESS</h1>
             <h5>Order your pizza online now. In short it will be in front of your door!</h5>
         </div>
-        <a href="index.html">ORDER NOW!</a>    
+        <form class="form" action="index.html" method="POST">
+            <h3>YOU HAVE SUCCESSFULLY REGISTERED!</h3>
+            <button>GO BACK</button>
+        </form>
     </main>
     <footer>
 
